# scnni

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
demo_net/: CMakeLists.txt  demo.cpp  demo_net.pnnx.param
include/: blob.hpp  graph.hpp  layer.hpp  layer_factory.hpp  macros.h
include/scnni/: blob.hpp  graph.hpp  layer.hpp  layer_factory.hpp  logger.hpp  macros.h  operator.hpp  paramdict.hpp  tensor.hpp
include/scnni/layers/: conv2d.hpp  flatten.hpp  input.hpp  linear.hpp  maxpool2d.hpp  output.hpp  relu.hpp  softmax.hpp
python_scripts/: test_net.py
python_scripts/covn2d_net/conv2d_test1/: conv2d_net.py  conv2d_test1.ncnn.param  conv2d_test1.pkl  conv2d_test1.pnnx.onnx  conv2d_test1.pnnx.param  conv2d_test1.pt  conv2d_test1_ncnn.py  conv2d_test1_pnnx.py  debug.param
python_scripts/linear_net/: debug.param  linear_net.ncnn.param  linear_net.pkl  linear_net.pnnx.onnx  linear_net.pnnx.param  linear_net.pt  linear_net.py  linear_net_ncnn.py  linear_net_pnnx.py
python_scripts/relu_flatten_net/: debug.param  debug2.param  relu_flatten_net.ncnn.param  relu_flatten_net.pnnx.onnx  relu_flatten_net.pnnx.param  relu_flatten_net.pt  relu_flatten_net_ncnn.py  relu_flatten_net_pnnx.py
python_scripts/relu_maxpool_flatten_linear_softmax_net/: debug.param  debug2.param  relu_maxpool_flatten_linear_softmax_net.ncnn.param  relu_maxpool_flatten_linear_softmax_net.pkl  relu_maxpool_flatten_linear_softmax_net.pnnx.onnx  relu_maxpool_flatten_linear_softmax_net.pnnx.param  relu_maxpool_flatten_linear_softmax_net.pt  relu_maxpool_flatten_linear_softmax_net.py  relu_maxpool_flatten_linear_softmax_net_ncnn.py  relu_maxpool_flatten_linear_softmax_net_pnnx.py
python_scripts/relu_maxpool_flatten_net/: debug.param  debug2.param  relu_maxpool_flatten_net.ncnn.param  relu_maxpool_flatten_net.pnnx.onnx  relu_maxpool_flatten_net.pnnx.param  relu_maxpool_flatten_net.pt  relu_maxpool_flatten_net_ncnn.py  relu_maxpool_flatten_net_pnnx.py
python_scripts/relu_only_net/: debug2.param  relu_only_net.ncnn.param  relu_only_net.pnnx.onnx  relu_only_net.pnnx.param  relu_only_net.pt  relu_only_net_ncnn.py  relu_only_net_pnnx.py
python_scripts/softmax_net/: debug.param  debug2.param  softmax_net.ncnn.param  softmax_net.pnnx.onnx  softmax_net.pt  softmax_net_ncnn.py  softmax_net_pnnx.py  test_net.py
python_scripts/softmax_only_net/: softmax_net.pnnx.param
src/: graph.cpp  ir.cpp  layer_factory.cpp  operator.cpp  paramdict.cpp  store_zip.cpp  tensor.cpp  tmp.cpp
src/layers/: conv2d.cpp  flatten.cpp  input.cpp  linear.cpp  maxpool2d.cpp  output.cpp  relu.cpp  softmax.cpp
test/: CMakeLists.txt  CMakelists.txt  read_image.cpp  test_graph.cpp  test_layer.cpp  test_main.cpp  test_tensor.cpp
